--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 install: 
   - pip install pandas
   - pip install scipy
+  - pip install PyQt5
 script: 
 - python -m unittest discover -s tests
