--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install PyQt5
 before_install:
         - sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0
+        - sudo apt install libxkbcommon-x11-0
 dist: xenial
 services:
   - xvfb
