--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ install:
 before_install:
         - sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0
         - sudo apt install libxkbcommon-x11-0
-dist: xenial
-services:
-  - xvfb
+ldd `python -c 'import PyQt5; import os.path; print(os.path.join(os.path.dirname(PyQt5.__file__), "Qt", "plugins", "platforms", "libqxcb.so"))'` 
+
+#dist: xenial
+#services:
+#  - xvfb
 script: 
-- python -m unittest discover -s tests
+#- python -m unittest discover -s tests
+- python -m unittest discover tests
