--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,4 @@ dist: xenial
 script: 
 - pip install pytest pytest-qt
 - py.test -sv tests
-- python -m unittest discover tests
-#- python -m unittest discover -s tests
+#- python -m unittest discover tests
